--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "jquery": "^3.3.1",
+    "luxon": "^3.0.3",
     "nodemon": "^2.0.19",
     "pg": "^8.2.1"
   }
